--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^49.0.3",
+    "axios": "^1.5.0",
+    "expo": "^44.0.6",
     "expo-constants": "~14.4.2",
+    "expo-font": "^11.4.0",
     "expo-linking": "~5.0.2",
-    "expo-router": "2.0.0",
-    "expo-splash-screen": "~0.20.4",
+    "expo-router": "^1.5.3",
+    "expo-splash-screen": "^0.10.3",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
